# qtranscribe

./: Dockerfile  main.py  pyproject.toml  requirements.txt
qtranscribe/: __init__.py  api.py  schema.py  schemas.py  service.py
